--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "build": "tsc",
     "dev": "pnpm prisma migrate deploy && nodemon",
+    "build:prod": "./sc.sh",
     "start:prod": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@vercel/ncc": "^0.38.3",
     "nodemon": "^3.1.9",
     "prisma": "^6.2.0",
     "ts-node": "^10.9.2",
@@ -23,7 +24,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.0",
     "@types/cookie-parser": "^1.4.8",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
