resolved build issue with ncc in backend and added build time environment vars for prisma migrate

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,12 @@
 FROM node:18-alpine AS build
 
-RUN mkdir -p /workspaces
 WORKDIR /workspaces
-COPY package.json .
-COPY package-lock.json .
+COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
+
+ARG DATABASE_URL
+ENV DATABASE_URL=${DATABASE_URL}
 
 RUN sh prisma-and-build.sh
 
