--- a/todo-list/Dockerfile
+++ b/todo-list/Dockerfile
@@ -1,8 +1,7 @@
 FROM node:18-alpine AS build
 
 WORKDIR /app
-COPY package.json .
-COPY package-lock.json .
+COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
 RUN npm run build
@@ -11,8 +10,8 @@ FROM nginx:1.27-alpine AS production
 
 COPY .docker/app/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY .docker/app/nginx/conf.d/ /etc/nginx/conf.d/
-COPY .docker/app/entrypoint.sh /entrypoint.sh
 COPY .docker/app/nginx/init-scripts/ /docker-entrypoint.d/
+COPY .docker/app/entrypoint.sh /entrypoint.sh
 
 WORKDIR /usr/share/nginx/html
 
